VT341805-360: Title jump on pages fixed

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -36,8 +36,10 @@ global style for all pages
 }
 
 .title {
+  position: static;
   text-align: center;
-  margin-bottom: 5%;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
 }
 
 .collapsed {
